# nova-container-system

./: .gitignore  Cargo.toml  LAUNCH_GUIDE.md  LICENSE  Novafile  PRODUCTION_CHECKLIST.md  README.md  deploy.sh  deploy_website.sh  index.html  install.sh  learn.html  test_runtime.sh
data/: hello.txt
docs/: ENTERPRISE.md  Novafile.spec.md  QUICKSTART.md  REVOLUTIONARY_FEATURES.md  TROUBLESHOOTING.md
examples/: node_server.js  package.json  test_python_app.py
src/: main.rs  runtime.rs  runtime_detector.rs  scheduler.rs
system/: CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  GITHUB_TOKEN_SETUP.md  README.md  RELEASE_NOTES.md  cleanup_src.sh  install.sh
system/docs/: API.md  ARCHITECTURE.md
system/examples/: file_write.wat  hello.wat  http_server.rs  infinite_loop.wat  network_test.wat  oom.wat  python_server.py  test_nodejs_app.js
system/scripts/: start_server.sh
system/src/: main.rs  network.rs  runtime.rs  runtime_detector.rs
system/src/api/: auth.rs  db.rs  handlers.rs  mod.rs  schema.sql
system/src/builder/: mod.rs
system/src/cli/: mod.rs
system/src/core/: mod.rs  network.rs  runtime.rs  scheduler.rs
system/src/core/builder/: mod.rs
system/src/core/runtimes/: nodejs.rs  python.rs
system/src/runtimes/: common.rs  mod.rs
system/www/: billing.html  cloud_status.html  dashboard-shared.css  dashboard.css  dashboard.html  deployments.html  forgot-password.html  index.html  learn.html  login.html  project.html  settings.html  signup.html  style.css
system/www/assets/css/: learning.css
system/www/js/: dashboard.js
website/: dashboard.css  (+7 more)
(+10 files in other folders)
