[package]
name = "nova_container_system"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "16.0"
wasmtime-wasi = "16.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
