[package]
name = "nova_container_system"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "16.0"
wasmtime-wasi = "16.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.10.0"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
futures-util = "0.3"
